CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

11 April 2008
+ Added autocomplete jquery plugin

9 April 2008
+ Added times for showing and hiding key elements.

7 April 2008
+ Changed function call in Setup to manual copy to avoid confusion in File class

4 April 2008
+ Updated pagesmith and categories conversion for new File Cabinet.

Version 1.8.1
--------------------------------------------------------------
1 April 2008
+ Change to pullTables to allow create unique index to work properly.

31 March 2008
+ Form class was ignoring the use_auth_key variable.

Version 1.8.0
---------------------------------------------------------------
26 March 2008
+ Fixed multiple select input

23 March 2008
+ Fix for atHome in Core

20 March 2008
+ getCurrentUrl now strips any forward slash from the front of the
  address
+ Added not like and not ilike to where.
+ Update missing fck and tinymce copy
+ Update missing multiple_select javascript

17 March 2008
+ copy_directory has a fourth parameter to ignore hidden files.
+ Changing backup directory for .htaccess to files so root directory
  doesn't have to be writable.

14 March 2008
+ FCK spelling docs changed
+ Updated tinymce head file for 3.0+ version

13 March 2008
+ PageSmith conversion : Added page titles to search.

12 March 2008
+ Database: added unique parameter to createTableIndex

7 March 2008
+ Added Sam Collett to credits since using his jquery script.
+ Added selectboxes jquery script from author above.
+ Added multiple_select javascript.
+ Updated jquery

5 March 2008
+ XMLParser : single items were overwriting one another. Believe it is
  fixed.
+ Forward.php : more edits. Dumping .html shortcut requirement,
  checking for module status instead.

3 March 2008
+ DB_Pager : Fixed bug with joinResult and row counts. Thanks Greg.

28 February 2008
+ Added plugForward function

26 February 2008